--- a/TabularDataPreparationUsingPycaret.ipynb
+++ b/TabularDataPreparationUsingPycaret.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMj85wyNdRvAvNpZhw2S80D",
+      "authorship_tag": "ABX9TyMtpiaa47MRGV4ako8ls5dA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,9 +152,13 @@
       "source": [
         "%%writefile data_preparation.py\n",
         "#!/usr/bin/env python3\n",
-        "import argparse\n",
         "\n",
-        "# Defining and parsing the command-line arguments\n",
+        "import sys\n",
+        "for arg in sys.argv:\n",
+        "    print(arg)\n",
+        "sys.stdout.flush()\n",
+        "\n",
+        "import argparse\n",
         "parser = argparse.ArgumentParser(description='kubeflow pipeline component to read csv file and prepare the data')\n",
         "parser.add_argument('--bypass-rclone-for-input-data', default=False, action=\"store_true\", help='whether input csv file should be read like local file - rclone is completely bypassed')\n",
         "parser.add_argument('--bypass-rclone-for-output-data', default=False, action=\"store_true\", help='whether output csv file should be written like local file - rclone is completely bypassed')\n",
@@ -192,24 +196,35 @@
         "#setting rclone related env\n",
         "import os\n",
         "import json\n",
-        "rclone_config = json.loads(args.rclone_environment_var)\n",
-        "print('rclone_config = (', type(rclone_config), ')', rclone_config)\n",
-        "for item in rclone_config.items():\n",
-        "    os.environ[item[0]] = item[1]\n",
+        "try:\n",
+        "    rclone_config = json.loads(args.rclone_environment_var)\n",
+        "    print('rclone_config = (', type(rclone_config), ')', rclone_config)\n",
+        "    for item in rclone_config.items():\n",
+        "        #replacing quote with double quote to make the values json compatible (note for string without ', below replacement has no effect)\n",
+        "        os.environ[item[0]] = str(item[1]).replace('\\'', '\"')\n",
+        "        print(item[0], ' => ', os.environ[item[0]])\n",
+        "except BaseException as err:\n",
+        "    print(\"Error=\", err, ' ', type(err))\n",
+        "    sys.stdout.flush()\n",
+        "    sys.exit(\"Forceful exit as exception encountered while loading rclone_config\")    \n",
         "\n",
         "#temporary directory creation\n",
         "import tempfile\n",
-        "if not args.bypass_rclone_for_input_data:\n",
-        "    local_datastore_read_dir = tempfile.mkdtemp(prefix=\"my_local_read-\")\n",
-        "    print('local_datastore_read_dir:',local_datastore_read_dir)\n",
+        "try:\n",
+        "    if not args.bypass_rclone_for_input_data:\n",
+        "        local_datastore_read_dir = tempfile.mkdtemp(prefix=\"my_local_read-\")\n",
+        "        print('local_datastore_read_dir:',local_datastore_read_dir)\n",
         "\n",
-        "if not args.bypass_rclone_for_output_data:\n",
-        "    local_datastore_write_dir = tempfile.mkdtemp(prefix=\"my_local_write-\")\n",
-        "    print('local_datastore_write_dir:',local_datastore_write_dir)\n",
+        "    if not args.bypass_rclone_for_output_data:\n",
+        "        local_datastore_write_dir = tempfile.mkdtemp(prefix=\"my_local_write-\")\n",
+        "        print('local_datastore_write_dir:',local_datastore_write_dir)\n",
+        "except BaseException as err:\n",
+        "    print(\"Error=\", err, ' ', type(err))\n",
+        "    sys.stdout.flush()\n",
+        "    sys.exit(\"Forceful exit as exception encountered while creating temporary directories\")\n",
         "\n",
         "#input file handling\n",
         "import subprocess\n",
-        "import sys\n",
         "import ntpath\n",
         "if args.input_datasource_directory_mountable:\n",
         "    input_data_read_cmd = \"rclone -v mount remoteread:\" + ntpath.dirname(args.input_datasource_file_name) + ' ' + local_datastore_read_dir + ' --daemon'\n",
@@ -954,7 +969,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Following tests can be executed in code-colab platform"
+        "Following test uses Google Cloud Storage (GCS). To share the credential of gcs, we will create service account which can access the GCS on end-user's behalf. For that refer \n",
+        "https://cloud.google.com/iam/docs/service-accounts (Go to 'User-managed service accounts' section)\n",
+        "create a new user-managed service account for accessing gcs bucket. Under 'Grant this service account access to project' option, find roles filter by google product -> select -> roles for 'cloud storage' -> provide roles corresponding to object creation in bucket. Once service account is created, download the key file and preserve it secretly in your personal capacity. Refer: https://cloud.google.com/iam/docs/creating-managing-service-account-keys for how to generate the service-account json file. Rename that file as 'sa_gcs_service_account.json' and then upload to google colab using 'upload to session storage' icon.\n",
+        "\n",
+        "It is needless to say that before running these tests, two buckets were created - namely -(a)kfpcomponent and (b)shastest. If you want to run the below test for other bucket name, please change the test command accordingly. These test cannot be made part of docker-UT as it will require GCS service account related confidential file to be exposed in docker."
       ],
       "metadata": {
         "id": "D-AExe5ISYMs"
@@ -963,13 +982,42 @@
     {
       "cell_type": "code",
       "source": [
-        "!rm -rf /tmp/my_local_dir_for_test\n",
-        "!cp data_preparation.py /tmp\n",
-        "!mkdir /tmp/my_local_dir_for_test\n",
-        "!python /tmp/data_preparation.py --rclone-environment-var \\\n",
-        "    '{\"RCLONE_CONFIG_REMOTEREAD_TYPE\":\"gcs\", \"RCLONE_CONFIG_REMOTEREAD_SERVICE_ACCOUNT_FILE\":\"/content/sa_gcs_service_account.json\", \"RCLONE_CONFIG_REMOTEREAD_LOCATION\":\"us-east1\", \\\n",
-        "    \"RCLONE_CONFIG_REMOTEWRITE_TYPE\":\"gcs\", \"RCLONE_CONFIG_REMOTEWRITE_SERVICE_ACCOUNT_FILE\":\"/content/sa_gcs_service_account.json\", \"RCLONE_CONFIG_REMOTEWRITE_LOCATION\":\"us-east1\", \"RCLONE_CONFIG_REMOTEWRITE_BUCKET_POLICY_ONLY\":\"true\"}' \\\n",
-        "    --input-datasource-directory-mountable --input-datasource-file-name 'kfpcomponent/CTG.csv' --additional-options-csv-parsing '{\"sep\":\",\" , \"header\":0}' \\\n",
+        "import json\n",
+        "with open('/content/sa_gcs_service_account.json','r') as file:\n",
+        "    gcs_sa_content = json.loads(file.read())\n",
+        "\n",
+        "rclone_env_str = '{\"RCLONE_CONFIG_REMOTEREAD_TYPE\":\"gcs\",' + \\\n",
+        "                 '\"RCLONE_CONFIG_REMOTEREAD_SERVICE_ACCOUNT_CREDENTIALS\":{},'.format(json.dumps(gcs_sa_content)) + \\\n",
+        "                 '\"RCLONE_CONFIG_REMOTEREAD_LOCATION\":\"us-east1\",' + \\\n",
+        "                 '\"RCLONE_CONFIG_REMOTEWRITE_TYPE\":\"gcs\",' + \\\n",
+        "                 '\"RCLONE_CONFIG_REMOTEWRITE_SERVICE_ACCOUNT_CREDENTIALS\":{},'.format(json.dumps(gcs_sa_content)) + \\\n",
+        "                 '\"RCLONE_CONFIG_REMOTEWRITE_LOCATION\":\"us-east1\",' + \\\n",
+        "                 '\"RCLONE_CONFIG_REMOTEWRITE_BUCKET_POLICY_ONLY\":\"true\"}'\n",
+        "\n",
+        "print(rclone_env_str)\n",
+        "#to remain compatible with bash command line argument (refer below how $rclone_env_str is passed in %%bash)\n",
+        "#Read: handling of double quotes in bash - https://stackoverflow.com/questions/19579546/can-i-access-python-variables-within-a-bash-or-script-ipython-notebook-c\n",
+        "rclone_env_str = rclone_env_str.replace('\"', '\\\\\"') \n",
+        "\n",
+        "print(rclone_env_str)"
+      ],
+      "metadata": {
+        "id": "W3-AwP_4rJXm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash -s \"$rclone_env_str\"\n",
+        "rm -rf /tmp/my_local_dir_for_test\n",
+        "cp data_preparation.py /tmp\n",
+        "mkdir /tmp/my_local_dir_for_test\n",
+        "#note the difference in command line handling with double quoted and single quoted string. if single quoted, the inside string is passed into the program as it is.\n",
+        "#if double quoted, the inside string is evaluated - as part of that all double quotes are further removed unless they are escaped.\n",
+        "python /tmp/data_preparation.py --rclone-environment-var \"$1\" \\\n",
+        "    --input-datasource-file-name 'kfpcomponent/CTG.csv' --additional-options-csv-parsing '{\"sep\":\",\" , \"header\":0}' \\\n",
         "    --type-of-data-analysis-task 'classification' --target-variable-name 'NSP' \\\n",
         "    --data-preparations-options '{\"ignore_low_variance\":true, \"remove_outliers\":true, \"remove_multicollinearity\":true, \"multicollinearity_threshold\":0.7}' \\\n",
         "    --output-datasource-file-name 'shastest/CTG_data-prep.csv' \\\n",
@@ -984,7 +1032,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "#validation test to check file was correctly uploaded in GCS storage.\n",
         "from google.cloud import storage\n",
         "import os\n",
         "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"/content/sa_gcs_service_account.json\"\n",
@@ -1068,36 +1116,23 @@
       "cell_type": "code",
       "source": [
         "import kfp\n",
-        "\n",
+        "import json\n",
         "csv_data_prepare_op_both_in_out_using_rclone = kfp.components.load_component_from_file('component_both_input_output_using_rclone.yaml')\n",
         "\n",
         "@kfp.dsl.pipeline(name=\"testpipeline2\")\n",
-        "def my_sample_pipeline_all_steps_using_rclone(gcs_sa_content: str):\n",
-        "    rclone_env_var_for_step1 =  '{\"RCLONE_CONFIG_REMOTEREAD_TYPE\":\"http\",' + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEREAD_URL\":\"https://raw.githubusercontent.com/pycaret/datasets/main/data/common/\"' + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEWRITE_TYPE\":\"gcs\",' + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEWRITE_SERVICE_ACCOUNT_CREDENTIALS\":{},'.format(gcs_sa_content) + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEWRITE_LOCATION\":\"us-east1\",' + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEWRITE_BUCKET_POLICY_ONLY\":\"true\"}'\n",
-        "    step1_op = csv_data_prepare_op_both_in_out_using_rclone(rclone_environment_var=rclone_env_var_for_step1,\n",
-        "                                            input_datasource_file_name='CTG.csv',\n",
+        "def my_sample_pipeline_all_steps_using_rclone(rclone_env_val:str):\n",
+        "    \n",
+        "    step1_op = csv_data_prepare_op_both_in_out_using_rclone(rclone_environment_var=rclone_env_val,\n",
+        "                                            input_datasource_file_name='kfpcomponent/CTG.csv',\n",
         "                                            type_of_data_analysis_task='classification',\n",
         "                                            target_variable_name='NSP',\n",
         "                                            data_preparations_options='{\"ignore_low_variance\":true, \"remove_outliers\":true}', \n",
         "                                            additional_options_csv_writing='{\"index\":false}',\n",
         "                                            #output_datasource_directory_mountable=True,\n",
         "                                            output_datasource_file_name='shastest/CTG_data-prep1.csv'\n",
-        "                                            )\n",
+        "                                            )  \n",
         "\n",
-        "    rclone_env_var_for_step2 =  '{\"RCLONE_CONFIG_REMOTEREAD_TYPE\":\"gcs\",' +  \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEREAD_SERVICE_ACCOUNT_CREDENTIALS\":{},'.format(gcs_sa_content) + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEREAD_LOCATION\":\"us-east1\",' + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEREAD_BUCKET_POLICY_ONLY\":\"true\",' + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEWRITE_TYPE\":\"gcs\",' + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEWRITE_SERVICE_ACCOUNT_CREDENTIALS\":{},'.format(gcs_sa_content) + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEWRITE_LOCATION\":\"us-east1\",' + \\\n",
-        "                                '\"RCLONE_CONFIG_REMOTEWRITE_BUCKET_POLICY_ONLY\":\"true\"}'\n",
-        "    csv_data_prepare_op_both_in_out_using_rclone(rclone_environment_var=rclone_env_var_for_step2,\n",
+        "    csv_data_prepare_op_both_in_out_using_rclone(rclone_environment_var=rclone_env_val,\n",
         "                                            #input_datasource_directory_mountable=True,\n",
         "                                            input_datasource_file_name='shastest/CTG_data-prep1.csv',\n",
         "                                            type_of_data_analysis_task='classification',\n",
@@ -1276,7 +1311,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git commit -a -m \"corrected docker url\""
+        "!git commit -a -m \"improved printing\""
       ],
       "metadata": {
         "id": "VbaNqafyYHV7"
